Fetch Reddit Finished

--- a/style.css
+++ b/style.css
@@ -1,4 +1,7 @@
-.carousel-item {
-    width: 400px;
-    height: 500px;
+img {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  height: 50%;
 }
