--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,57 @@
 body {
-    background-color: honeydew;
+    background-color: aliceblue;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+h1 {
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+#imgSearch {
+    margin: 40px;
+    width: 400px;
+    height: 50px;
+    border: 2px solid black;
+    border-radius: 5px;
+    background-color: whitesmoke;
+    color: black;
+    padding: 10px;
+    font-size: medium;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#searchButton{
+    color: whitesmoke;
+    background-color: black;
+    transition-duration: .4s;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#searchButton:hover {
+    color: black;
+    background-color: green;
 }
 
 #testImage {
     display: none;
+    margin: 100px;
 }
 
 #stopButton {
     display: none;
+    color: whitesmoke;
+    background-color: black;
+    transition-duration: .4s;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+#stopButton:hover {
+    color: black;
+    background-color: red;
 }
