created a loop to interpet img links
The loop pushes each link into an array. Attempted to create a loop that writes each array item into an HTML element. This is currently non functional.

--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,19 @@ body{
 #stopButton {
     text-align: center ;
     position: absolute ;
-    bottom: 40% ;
+    top: 10% ;
     left: auto;
     right: auto;
+    width: 100px;
     background-color: palevioletred;
+}
+
+#imgBox {
+    position: absolute ;
+    top: 25%;
+    left: 30%;
+    height: 1000px;
+    width: 1000px;
+    
+    
 }
