--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+    font-family: 'Roboto', sans-serif;
+    background-color: lightsteelblue;
+}
+
 #gallery {
     width: 70%;
     margin: 100px auto;
@@ -10,8 +15,28 @@
     margin: 0 auto;
 }
 
+#textInput {
+    border: 1px solid black;
+    background-color: aliceblue;
+}
+
+#submitButton {
+    font-family: 'Roboto', sans-serif;
+    padding: 2px 30px;
+    border-radius: 10%;
+    border: 1px solid black;
+    background-color: lightsteelblue;
+    cursor: pointer;
+}
+
 #stopButton {
+    font-family: 'Roboto', sans-serif;
     display: block;
-    width: 25%;
+    width: 15%;
+    padding: 10px 30px;
     margin: 0 auto;
+    border-radius: 5%;
+    border: 1px solid black;
+    background-color: lightsteelblue;
+    cursor: pointer
 }
