--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 body {
     margin: 0;
-    background-color: grey;
-    
+    background-color: rgb(60, 60, 60);
     align-items: center;
+    color: whitesmoke;
+    font-family: 'Shizuru', cursive;
 }
 
 h1 {
@@ -10,6 +11,7 @@ h1 {
     justify-content: center;
     align-items: center;
     margin-top: 50px;
+    
 }
 
 div {
@@ -24,22 +26,59 @@ div {
 img {
     height: 200px;
 }
-form, #stopButton {
+
+/* form, #stopButton {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 50px;
     flex-direction: column;
-}
+    font-family: 'Shizuru', cursive;
+} */
 
 #textInput {
     margin-top: 15px;
     margin-bottom: 15px;
+    background-color: rgb(60, 60, 60);
+    color: whitesmoke;
+    border: none;
+    border-bottom: 2px solid burlywood;
 }
 
-#stopButton, #formSubmit {
+#stopButton {
     display: block;
     width: 25%;
     margin: 0 auto;
     text-align: center;
+    font-family: 'Shizuru', cursive;
+    font-size: 16px;
+    padding: 10px;    
 }
+
+#submitButton{
+    display: block;
+    width: 50%;
+    margin: 0 auto;
+    text-align: center;
+    font-family: 'Shizuru', cursive;
+    font-size: 16px;
+    padding: 10px;    
+}
+
+#formSubmit {
+    display: block;
+    width: 25%;
+    margin: 0 auto;
+    text-align: center;
+    font-family: 'Shizuru', cursive;
+    font-size: 16px;
+}
+
+#stopButton, #submitButton {
+    background-color: rgb(60, 60, 60);
+    color: whitesmoke;
+    border: 1px solid rgb(138, 138, 138);
+}
+
+
+
