Add function to hide the form

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
 body{
-    background-color: blue;
+    background-color: peachpuff;
+    display: flex;
+    flex-direction: column;
+    align-items:  center;
+}
+
+#divInstructions{
+    text-align: center;
 }
