--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,54 @@
 body {
-    background-color: steelblue;
+    margin-top: 75px;
+    background-color: rgb(25, 115, 151);
+    align-items: center;
+    color: whitesmoke;
+    font-family: 'Questrial', sans-serif;
+    text-align: center;
 }
 
 h1 {
-    color: goldenrod
+    font-family: 'Righteous', cursive;
+    font-size: 50px;
+}
 
+h2 {
+    font-size: 25px;    
+}
+
+img {
+    height: 300px;
+    margin: 30px;    
+}
+
+#gallery {
+    display: flex;
+    justify-content: center;
+}
+
+#form-block {
+    margin-top: 30px;
+}
+
+label {
+    font-size: 25px;
+    margin: 20px;
+}
+
+input {
+    width: 300px;
+    height: 50px;
+    border: 3px solid black;
+    font-size: 20px;
+}
+
+button {
+    width: 200px;
+    padding: 10px;
+    font-size: 20px;
+    font-family: 'Righteous', cursive;
+    background-color: rgb(28, 44, 58);
+    color: whitesmoke;
+    border-radius: 10px;
+    margin: 15px;
 }
