Add images to DOM from fetch -- need to fix bug on the interval to transition images in slide very 1second --

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-body{
+
+.basicSetup{
     background-color: peachpuff;
     display: flex;
     flex-direction: column;
@@ -7,4 +8,12 @@ body{
 
 #divInstructions{
     text-align: center;
+}
+
+#slideshowPlaceHolder{
+    border-style: dashed;
+    background-color: red;
+    width: 200px;
+    height: 200px;
+    margin: 10px;
 }
