--- a/css/style.css
+++ b/css/style.css
@@ -5,15 +5,14 @@
     flex-direction: column;
     align-items:  center;
 }
+header{
+    display: flex;
+    flex-direction: column;
+    align-items:  center;
+}
 
 #divInstructions{
     text-align: center;
 }
 
-#slideshowPlaceHolder{
-    border-style: dashed;
-    background-color: red;
-    width: 200px;
-    height: 200px;
-    margin: 10px;
-}
+
