--- a/css/style.css
+++ b/css/style.css
@@ -1,69 +1,40 @@
 body {
-    margin: 0;
     background-color: rgb(60, 60, 60);
-    align-items: center;
     color: whitesmoke;
     font-family: 'Shizuru', cursive;
+    margin: 0 auto;
 }
 
 h1 {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
-    
+    margin-top: 50px; 
 }
 
-div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+#imageSpace {
     margin-top: 50px;
-    flex-direction: column;
-
+    display: block;
+    margin: 0 auto;
+    text-align: center;
 }
 
 img {
     height: 200px;
 }
 
-/* form, #stopButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-top: 50px;
-    flex-direction: column;
-    font-family: 'Shizuru', cursive;
-} */
-
 #textInput {
     margin-top: 15px;
     margin-bottom: 15px;
+    padding: 10px;
     background-color: rgb(60, 60, 60);
-    color: whitesmoke;
+    text-align: center;
+    color: red;
+    font-size: 16px;
     border: none;
     border-bottom: 2px solid burlywood;
 }
 
-#stopButton {
-    display: block;
-    width: 25%;
-    margin: 0 auto;
-    text-align: center;
-    font-family: 'Shizuru', cursive;
-    font-size: 16px;
-    padding: 10px;    
-}
-
-#submitButton{
-    display: block;
-    width: 50%;
-    margin: 0 auto;
-    text-align: center;
-    font-family: 'Shizuru', cursive;
-    font-size: 16px;
-    padding: 10px;    
-}
 
 #formSubmit {
     display: block;
@@ -78,7 +49,16 @@ img {
     background-color: rgb(60, 60, 60);
     color: whitesmoke;
     border: 1px solid rgb(138, 138, 138);
+    width: 100px;
+    text-align: center;
+    font-family: 'Shizuru', cursive;
+    font-size: 16px;
+    padding: 10px; 
 }
 
 
-
+#stopButton {
+    display: block;
+    margin: 0 auto;
+    text-align: center;
+}
