--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 body {
     font-family: 'Comic Sans MS', sans-serif;
 }
+
+#container {
+    background-color: blue;
+    background-image: url('../zuke.jpg');
+    background-size: cover;
+    height: 500px;
+    width: 500px;
+}
