--- a/css/styles.css
+++ b/css/styles.css
@@ -7,12 +7,20 @@
 }
 
 #frame1 {
+   
 }
 
 #frame2 {
-
+    align-items: center;
 }
 
 #buttonContainer {
     margin-top: 30px;
+}
+#imagePlace{
+    
+}
+
+#mm {
+   
 }
