--- a/css/style.css
+++ b/css/style.css
@@ -8,8 +8,8 @@ body {
 }
 
 #container {
+    display : none;
     background-color: white;
-    background-image: url('../zuke.jpg');
     background-size: cover;
     height: 800px;
     width: 800px;
@@ -27,4 +27,9 @@ form {
 
 #stopButton {
     margin:20px;
+}
+
+img {
+    width: 800px;
+    height: 800px;
 }
