--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
     text-align: center;
 }
 
+/*
 #container {
     background-color: white;
     background-size: cover;
@@ -15,6 +16,7 @@ body {
     border: 2px solid black;
     margin: 0 auto;
 }
+*/
 
 p {
     font-size: 20px;
@@ -26,4 +28,11 @@ form {
 
 #stopButton {
     margin:20px;
+}
+
+#slide {
+    max-height: 800px;
+    max-height: 800px;
+    border: 2px solid black;
+    margin: 0 auto;
 }
