--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,9 @@ form {
 #slide {
     max-height: 800px;
     max-height: 800px;
-    border: 1px solid black;
     margin: 0 auto;
+}
+
+#stopButton {
+    margin: 10px auto;
 }
