--- a/css/style.css
+++ b/css/style.css
@@ -9,24 +9,43 @@ body {
 	flex-direction: column;
 	align-items: center;
 	justify-content: center;
+    background-color: black;
+}
+
+#greeting {
+    color: white;
 }
 
 .search {
-    width: 100%;
+    width: auto;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
 #search {
 	border-radius: 25px;
-	border: 2px solid black;
+	border: 2px solid white;
 	background-color: transparent;
 	padding: .5rem;
 	text-align: center;
 	color: white;
 	font-size: 20px;
 	font-family: inherit;
-    color: goldenrod;
+    color: white;
+}
+
+#stopIt {
+    border-radius: 25px;
+	border: 2px solid white;
+	background-color: transparent;
+	padding: .5rem;
+	text-align: center;
+	color: white;
+	font-size: 20px;
+	font-family: inherit;
+    display: none;
+    margin-top: 80px;
 }
 
 #search:focus {
@@ -46,6 +65,13 @@ h1 {
 }
 
 #img {
-    margin-top: 150px;
+    margin-top: 70px;
+    border: none;
+    
 }
 
+#scuz {
+    border: none;
+    background: none;
+    object-fit: cover;
+}
