--- a/index.css
+++ b/index.css
@@ -1,10 +1,15 @@
-.cat-box {
-    height: 100px;
-    width: 100px;
-    margin: 30px;
+body {
+    display: inline-block;
+    text-align: center;
 }
 
 #container {
-    display: flex;
-    flex-wrap: wrap;
+    height: 200px;
+    width: 200px;
+    background-color: grey;
+    margin: 25px auto;
+    display: inline-block;
+    justify-content: center;
 }
+
+
