--- a/css/style.css
+++ b/css/style.css
@@ -1,26 +1,32 @@
 body {
+    /* This will center my label and buttons */
     text-align: center;
+    background-color: darkblue;
 }
 img {
-    /* height: 100px; */
+    /* Hieght is set to the size I want. width auto to keep image proportion to the set hight.*/
+    /*  */
     height: 200px;
     width: auto;
-    position: absolute;
-    top: 35px;
     
+    /* used to make the slide work. */
     animation-name: slide;
-    animation-duration: 5s; 
+    animation-duration: 3s; 
 }
+/* -100% has the image start directly on the left side off the screen regardless of the width of the picture. Sinse the width of the pictures are diffent everytime this is good. */
+/* From what I cant tell em is relative to the container size. This fetl better. though the number is made up. 
+this may brake on other size screens */
 @keyframes slide {
-    from{ transform: translateX(-1000px)}
-    to{ transform: translateX(1000px)}
+    from{ transform: translateX(-100%)}
+    to{ transform: translateX(90em)}
   }
-  
-@keyframes {}
-form {
-    display: inline-block;
+
+/* Give the container hight so when it page is firsst loaded it has the right layout for when the img tag is put inside it from the DOM */
+#container {
+    height: 200px;
 }
-/* button {
-    width: auto;
-    height: auto;
-} */
+
+form {
+    /* pushes the form down a bit from the slideshow */
+    margin-top: 15px;
+}
