--- a/index.css
+++ b/index.css
@@ -1,15 +1,42 @@
 body {
     display: inline-block;
     text-align: center;
+    background-color: black;
+    color: white;
 }
 
 #container {
-    height: 200px;
-    width: 200px;
-    background-color: grey;
+
+    background-color: whitesmoke;
     margin: 25px auto;
     display: inline-block;
     justify-content: center;
 }
 
+#catDivA {
+    height: 300px;
+    width: 300px;
+    font-size: 45px;
+    padding-top: 40px;
+    justify-content: center;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
+h1 {
+    text-align: center;
+    background-color: black;
+    color: white;
+}
+
+form {
+    background-color: bisque;
+    text-align: center;
+}
+#container {
+    position: relative;
+}
+ #stop-slide {
+     margin: 20px auto 10px auto;
+     text-align: center;
+
+ }
