--- a/index.css
+++ b/index.css
@@ -1,6 +1,7 @@
 body {
-    display: inline-block;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     background-color: black;
     color: white;
 }
@@ -23,20 +24,26 @@ body {
 }
 
 h1 {
-    text-align: center;
+    display: flex;
+    justify-content: center;
     background-color: black;
     color: white;
 }
-
+p {
+    display: flex;
+    justify-content: center;
+}
 form {
+    display: flex;
+    justify-content: center;
     background-color: bisque;
     text-align: center;
 }
 #container {
-    position: relative;
+    display: flex;
+    justify-content: center;
 }
  #stop-slide {
      margin: 20px auto 10px auto;
      text-align: center;
-
  }
