--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,57 @@
 #title{
-    color:purple
+    color:rgb(25, 93, 153);
+    margin: 0;
+    position: absolute;
+    top: 15%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    
+}
+
+body{
+    max-width: max-content;
+    margin: auto;
+    background-color: rgb(51, 47, 47);
+    font-family: 'Source Sans Pro', sans-serif;
+}
+
+#stopSlideButton{
+
+    display: none;
+      margin: 0;
+  position: absolute;
+  top: 10%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+form{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+#submit{
+    border-radius:4px;
+    margin: 0;
+    position: absolute;
+    top: 20%%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+
+#imgDiv1{
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
 }
