struggled with this

--- a/index.css
+++ b/index.css
@@ -1,3 +1,68 @@
-h1 {
-    border: red;
+body {
+    width: 100vw;
+    height: 100vh;
+    background-color: rgb(188, 180, 180);
+ 
+
 }
+
+.cat-card{
+    height: 100px;
+    width: 100px;
+    border: 1px solid black
+
+}
+
+
+
+
+
+
+#container {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+/* h1 {
+    border: red;
+} */
+
+#start, #game-over {
+    padding: 5px;
+    cursor: pointer;
+    background-color: rgb(240, 14, 6);
+    /* color: #ffffff;
+    padding: 20px;
+    position: fixed;
+    top:50%;
+    left:50%;
+    margin-top: -100px;
+    margin-left: -100px;
+    height: 200px;
+    width: 250px;
+    text-align: center; */
+}
+
+/* #start { */
+    /* border: 3px solid #ffffff;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 10px;
+    border-radius: 15px;
+    cursor: pointer;
+    display: block;
+    width: 200px;
+    text-align: center;
+    font-size: 2em;
+    display: inline-block; */
+
+
+/* #start a:hover, #game-over a:hover {background-color: #ffffff; color:#1bafdb; } */
+
+
+
+/* #search-btn {
+    padding: 5px; 
+    background-color: greenyellow;
+} */
