--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,28 @@
 body{
-    display: flex;
+    /* display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: center; */
     background-color: rgba(255, 99, 71, 0.217);
 }
 
 header {
     text-align: center;
+}
+
+#slide-show {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#photo-display {
+    margin: auto;
+}
+
+form {
+    margin: auto;
+}
+
+button {
+    display: none;
+    margin: auto;
 }
