--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@ body {
 }
 
 #form-container {
-    margin: 50% 0;
+    margin: 40vh 0;
 }
 
 h1 {
@@ -20,7 +20,6 @@ h1 {
 #input {
     background: rgba(255, 255, 255, .5);
     border: 1px solid rgb(146, 206, 220);
-    ;
     font-size: 15px;
 }
 
@@ -42,7 +41,7 @@ img {
 }
 
 #slideshow-container {
-    margin: 50% 0 15% 0;
+    margin: 40vh 0 20px 0;
 }
 
 .hide {
