need to remove header and stop slideshow

--- a/css/index.css
+++ b/css/index.css
@@ -10,25 +10,62 @@
         flex-wrap: nowrap;
 
     }
-#image-results{
-    border: 2px solid green;
-    height: 75vh;
-    width: 100vh;
-    display: flex;
-    align-content: center;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-}
+
+
 #stop{
     justify-content: center;
 
     
 }
-#pictureResults{
-    border: 2px dashed blue;
-   height:fit-content;
-    margin: 5px;
-
-
+#slides-container{
+    max-width: 1000px;
+  position: relative;
+  margin: auto;
 }
+.mySlides{
+    display:none
+}
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  #fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+@keyframes fade {
+    from {opacity: .4}
+    to {opacity: 1}
+  }
+img{
+    width: 100%;
+}
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+  }
+  
+  .active, .dot:hover {
+    background-color: #717171;
+  }
