--- a/css/style.css
+++ b/css/style.css
@@ -1,44 +1,49 @@
 body{
     box-sizing: border-box;
-    background-color: rgba(255, 99, 71, 0.217);
+    /* background-color: rgba(255, 99, 71, 0.217); */
+    background-image: linear-gradient(tomato, white 80%);
     text-align: center;
 }
 
 header {
-    margin-top: 5vh;
-    height: 20vh;
+    margin-top: 2em;
+    height: 5em;
+    font-size: 2em;
 }
 
 #slide-show {
-    width: 30vw;
-    height: 40vh;
-    top: 20vh;
+    width: 50vw;
+    height: 500px;
+    top: 1em;
     margin: auto;
 }
 
 #photo-display {
     display: inline-block;
+    width: 50vw;
+    height: 300px;
 }
 
 form {
     display: inline-block;
-    margin-top: 5vh;
-    font-size: 2em;
-    
+    margin-top: 4em;
+    font-size: 2em;  
 }
 
 button {
-    width: 100px;
-    font-size: 2em;
+    width: 200px;
+    font-size: 20px;
     display: none;
+    margin: auto;
+
 }
 
 #mag-img {
-    position: absolute;
-    top: 50vh;
+    position: relative;
+    top: -20em;
+    right: -6em;
     transition-property: top;
     transition-duration: 1s;
     transition-delay: 0s;
-    right: 25vw;
     z-index: 2;
 }
