added stop slideshow functionality, fixed broken slideshow rotater, added restrictictions to images so they stayed within slideshow box

--- a/css/index.css
+++ b/css/index.css
@@ -9,14 +9,16 @@ body {
     flex-wrap:wrap;
     border: black solid;
     height: 500px;
+    width: 500px;
+    
 
 }
 
 #search {
     padding: 10px 10px 10px 10px;
 }
-/* 
+
 img {
-    display: none;
-    width: 100%
-} */
+    max-width: 100%;
+    max-height: 100%;
+}
