--- a/index.css
+++ b/index.css
@@ -7,6 +7,7 @@ h1 {
 body {
     background-color: aquamarine;
 }
-.Search {
-    text-align: center;
+#window {
+    height: 400px;
+    width: 400px;
 }
